# toprepos

./: .env  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter.yml  tests
tests/: test_get_top_repos.py
tests/fixtures/: expected.json  github_api_response.json
toprepos/: app.py  cache.py  formatters.py  http.py  sql.py
