[tool.poetry]
name = "toprepos"
version = "0.1.0"
description = ""
authors = ["denis <yudaev1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
requests = "^2.26.0"
python-dotenv = "^0.19.2"
flake8 = "^4.0.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests-mock = "^1.9.3"
responses = "^0.16.0"
requests-mock-flask = "^2021.7.10"
aioresponses = "^0.7.2"
nest-asyncio = "^1.5.4"
pytest-aiohttp = "^0.3.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
